# mcp

./: generate_best_practices_list.py  q-ide-config.json  test_server.py
.amazonq/rules/: python_usage.md  wellarchitected-rules.md
docs/servers/: aws-wellarchitected-mcp-server.md
src/aws-wellarchitected-mcp-server/: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  example_usage.py  pyproject.toml
src/aws-wellarchitected-mcp-server/awslabs/aws_wellarchitected_mcp_server/: __init__.py  adr_generator.py  display_utils.py  eisenhower_matrix.py  models.py  priority_analyzer.py  review.py  review_guide.py  review_templates.py  reviewer.py  (+6 more)
src/aws-wellarchitected-mcp-server/tests/: test_server.py
src/well-architected-bp-mcp-server/: IMPLEMENTATION.md  LOGS.txt  MANIFEST.in  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  pyproject.toml  test_direct.py  test_server.py  well-architected-bp-mcp-server-coverage.xml
src/well-architected-bp-mcp-server/examples/: usage.md
src/well-architected-bp-mcp-server/scripts/: scrape_content.py
src/well-architected-bp-mcp-server/src/well_architected_bp_mcp_server/: __init__.py  server.py
src/well-architected-bp-mcp-server/src/well_architected_bp_mcp_server/data/: cost_optimization.json  operational_excellence.json  performance_efficiency.json  reliability.json  schema.json  security.json  sustainability.json
src/well-architected-bp-mcp-server/src/well_architected_bp_mcp_server/data/lens/generative-ai/: cost_optimization.json  operational_excellence.json  performance_efficiency.json  reliability.json  security.json  sustainability.json
src/well-architected-bp-mcp-server/tests/: test_direct_mcp_execution.py  test_force_execution.py  test_mcp_functions.py  test_mcp_wrappers.py  test_minimal_coverage.py  test_server.py  test_server_coverage.py  test_wrapper_coverage.py
src/wellarchitected-review-mcp-server/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/wellarchitected-review-mcp-server/tests/: __init__.py  test_resources.py
(+13 files in other folders)
