[project]
name = "awslabs.well-architected-bp-mcp-server"
version = "0.1.0"
description = "MCP server for AWS Well-Architected Framework Best Practices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "AWS Labs", email = "aws-mcp-servers@amazon.com" }
]
keywords = ["mcp", "aws", "well-architected", "best-practices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/awslabs/mcp"
Repository = "https://github.com/awslabs/mcp"
Documentation = "https://github.com/awslabs/mcp/tree/main/src/well-architected-bp-mcp-server"

[project.scripts]
well-architected-bp-mcp-server = "well_architected_bp_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/well_architected_bp_mcp_server"]

[tool.hatch.build.targets.wheel.shared-data]
"src/well_architected_bp_mcp_server/data" = "share/well_architected_bp_mcp_server/data"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/MANIFEST.in",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "ruff>=0.14.8",
]

[tool.bandit]
exclude_dirs = [".venv", "venv", ".tox", "build", "dist"]
skips = ["B101"]  # Skip assert_used warnings in tests
